Fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
+  overflow: auto;
+  max-height: 100%;
+  
 }
 
 code {
